Codice commentato per ogni metodo